--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@ body {
 			   	 <font size="5">  
                     永久官网
                    </font>  
-                       <a id="latest" style="color:#4AB0F7;font-size:20px" data-url="https://edu.juejie.vip/auth/register?code=Jghdga51a"
+                       <a id="latest" style="color:#4AB0F7;font-size:20px" data-url="https://net.juejie.art"
                         onclick="javascript:top.location.href=this.getAttribute(&#39;data-url&#39;);">
-                           MarioBase.github.io
+                           net.juejie.art
                         </a>
                     </p> 
 					<br>
